New edit of personal site. Now has new gallery pieces, replace codeguild project image, the links open in new tabs, and a favicon has been added..

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <link href="https://fonts.googleapis.com/css?family=Bungee+Hairline|Megrim|Nixie+One" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Load favicons and icons -->
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/img/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/img/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/img/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/img/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/img/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/img/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="assets/img/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icons/favicon-16x16.png">
+    <link rel="manifest" href="assets/img/icons/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="assets/img/icons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <div class="site-wrapper">
@@ -31,7 +49,7 @@
       <div class="project-section">
         <div class="project">
           <div class="project-image chess-ai">
-            <a href="https://github.com/jameslim1021/Chess-AI" style="width: 100%; height: 100%; display: inline-block"></a>
+            <a href="https://github.com/jameslim1021/Chess-AI" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
           </div>
           <div class="project-title">
             <h3>Chess AI</h3>
@@ -43,7 +61,7 @@
         </div>
         <div class="project">
           <div class="project-image computer-tennis">
-            <a href="https://github.com/l4nk332/computer-tennis" style="width: 100%; height: 100%; display: inline-block"></a>
+            <a href="https://github.com/l4nk332/computer-tennis" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
           </div>
           <div class="project-title">
             <h3>Computer Tennis</h3>
@@ -55,7 +73,7 @@
         </div>
         <div class="project">
           <div class="project-image code-guild">
-            <a href="https://github.com/l4nk332/Code-Guild" style="width: 100%; height: 100%; display: inline-block"></a>
+            <a href="https://github.com/l4nk332/Code-Guild" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
           </div>
           <div class="project-title">
             <h3>Code-Guild</h3>
@@ -67,7 +85,7 @@
         </div>
         <div class="project">
           <div class="project-image heart-caller">
-            <a href="https://github.com/jameslim1021/HeartCaller" style="width: 100%; height: 100%; display: inline-block"></a>
+            <a href="https://github.com/jameslim1021/HeartCaller" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
           </div>
           <div class="project-title">
             <h3>HeartCaller</h3>
@@ -82,8 +100,26 @@
       <h2 class="section-title">Gallery</h2>
       <div class="gallery-section">
         <div class="gallery-showcase">
+          <div class="gallery-embed gallery-codeguild">
+            <a href="https://codepen.io/l4nk33/full/WxjjKG/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
+          </div>
+          <div class="gallery-description">
+            <hr class="underbar"/>
+            <p>This is the user interface for Code-Guild, a learning platform for developers. It is built in css without any frameworks. The layout uses css flexbox to create a responsive grid system.</p>
+          </div>
+        </div>
+        <div class="gallery-showcase">
+          <div class="gallery-embed gallery-modal">
+            <a href="https://codepen.io/l4nk33/full/wWdZJZ/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
+          </div>
+          <div class="gallery-description">
+            <hr class="underbar"/>
+            <p>This is a UI/UX design for a dropdown modal with instant messaging.</p>
+          </div>
+        </div>
+        <div class="gallery-showcase">
           <div class="gallery-embed gallery-marine">
-            <a href="https://codepen.io/l4nk33/full/VjWjRZ/" style="width: 100%; height: 100%; display: inline-block"></a>
+            <a href="https://codepen.io/l4nk33/full/VjWjRZ/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
           </div>
           <div class="gallery-description">
             <hr class="underbar"/>
@@ -92,7 +128,7 @@
         </div>
         <div class="gallery-showcase">
           <div class="gallery-embed gallery-particles">
-            <a href="https://codepen.io/l4nk33/full/mENLmW/" style="width: 100%; height: 100%; display: inline-block"></a>
+            <a href="https://codepen.io/l4nk33/full/mENLmW/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
           </div>
           <div class="gallery-description">
             <hr class="underbar"/>
@@ -101,7 +137,7 @@
         </div>
         <div class="gallery-showcase">
           <div class="gallery-embed gallery-cube">
-            <a href="https://codepen.io/l4nk33/full/jPRgRK/" style="width: 100%; height: 100%; display: inline-block"></a>
+            <a href="https://codepen.io/l4nk33/full/jPRgRK/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
           </div>
           <div class="gallery-description">
             <hr class="underbar"/>
@@ -110,7 +146,7 @@
         </div>
         <div class="gallery-showcase">
           <div class="gallery-embed gallery-checkbox">
-            <a href="https://codepen.io/l4nk33/full/vKJjOL/" style="width: 100%; height: 100%; display: inline-block"></a>
+            <a href="https://codepen.io/l4nk33/full/vKJjOL/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
           </div>
           <div class="gallery-description">
             <hr class="underbar"/>
@@ -119,7 +155,7 @@
         </div>
         <div class="gallery-showcase">
           <div class="gallery-embed gallery-jala">
-            <a href="https://codepen.io/l4nk33/full/jWXBmx/" style="width: 100%; height: 100%; display: inline-block"></a>
+            <a href="https://codepen.io/l4nk33/full/jWXBmx/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
           </div>
           <div class="gallery-description">
             <hr class="underbar"/>
@@ -143,17 +179,17 @@
         <div class="bio-container">
           <div class="avatar-image"></div>
           <div class="bio-details">
-            <div class="links"><a href="https://www.codewars.com/users/l4nk332">
-                <div class="link codewars"></div></a><a href="https://github.com/l4nk332">
-                <div class="link github"></div></a><a href="https://codepen.io/l4nk33/">
-                <div class="link codepen"></div></a><a href="https://www.linkedin.com/in/ianjabour">
+            <div class="links"><a target="_blank" href="https://www.codewars.com/users/l4nk332">
+                <div class="link codewars"></div></a><a target="_blank" href="https://github.com/l4nk332">
+                <div class="link github"></div></a><a target="_blank" href="https://codepen.io/l4nk33/">
+                <div class="link codepen"></div></a><a target="_blank" href="https://www.linkedin.com/in/ianjabour">
                 <div class="link linkedin"></div></a></div>
             <p>I'm a Full-Stack developer residing in the San Francisco Bay Area. The frontend technologies I am extensively proficient with include Angular, Sass, HTML Canvas, and SVG. On the backend I work predominantly with PostgreSQL as my DBMS of choice and the Express framework for creating and managing API routes. Whether it's implementing an algorithm, levelling up in CodeWars, or building software I always find ways to challenge myself and enhance my engineering skills.</p>
           </div>
         </div>
       </div>
       <footer class="footer">
-        <p><a href="https://github.com/l4nk332/ianjabour.io">100% Handcrafted by Ian Jabour</a></p>
+        <p><a href="https://github.com/l4nk332/ianjabour.io" target="_blank">100% Handcrafted by Ian Jabour</a></p>
       </footer>
     </div>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
