Adds capstone with project details. Adds new gallery piece 3d cube matrix. Adds link to Chess video part 1 in Chess Ai description. Currently in process of uploading capstone presentation. Once finished the link needs to be added to href in anchor tag in abstract cityscape description.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
       <h2 id="projects" class="section-title">Projects</h2>
       <div class="project-section">
         <div class="project">
+          <div class="project-image abstract-cityscape">
+            <a href="http://ianjabour.io/abstract_cityscape_3D/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
+          </div>
+          <div class="project-title">
+            <h3>Abstract Cityscape 3D</h3>
+            <hr class="underbar"/>
+          </div>
+          <div class="project-details">
+            <p>This is a 3D model of a cityscape that renders in the browser. Utilizing the Three.js library along with the HTML5 Audio API, I was able to bring the scene to life with lights and sound. The city is generated 100% procedurally, each building slightly unique in both shape and size. Through the analysis of audio waveforms I was able to animate the lights in the scene to reflect the average frequency range. This project allowed me to blend my experiences working in film production with my skill-set as a software developer. Feel free to <a href="#" class="info-link" target="_blank">watch</a> my presentation of this project for more details.</p>
+          </div>
+        </div>
+        <div class="project">
           <div class="project-image chess-ai">
             <a href="https://github.com/jameslim1021/Chess-AI" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
           </div>
@@ -56,7 +68,7 @@
             <hr class="underbar"/>
           </div>
           <div class="project-details">
-            <p>This project focuses on computer science concepts such as data structures and algorithms. Through utilization of a decision tree the AI can generate the all possible permutations of a chessboard 3 moves into the future (4 levels deep). Algorithms implemented in this project include depth first search, minimax, and alpha-beta pruning. This in conjunction with heuristics such as material (total piece count for each player), number of possible legal moves with emphasis on center squares, check/checkmate status, and pawn structure allow the AI to make the best possible move.</p>
+            <p>This project focuses on computer science concepts such as data structures and algorithms. Through utilization of a decision tree the AI can generate the all possible permutations of a chessboard 3 moves into the future. Algorithms implemented in this project include depth first search, minimax, and alpha-beta pruning. This in conjunction with heuristics such as material, number of possible legal moves with emphasis on center squares, check/checkmate status, and pawn structure allow the AI to make the best possible move. <a href="https://www.youtube.com/watch?v=uA0QOQDDKMw" class="info-link" target="_blank">Check out</a> this video Galvanize made on my team and the Chess-AI project.</p>
           </div>
         </div>
         <div class="project">
@@ -99,6 +111,15 @@
       <!-- Gallery Section-->
       <h2 class="section-title">Gallery</h2>
       <div class="gallery-section">
+        <div class="gallery-showcase">
+          <div class="gallery-embed gallery-cubematrix">
+            <a href="http://codepen.io/l4nk33/live/RGAOor" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
+          </div>
+          <div class="gallery-description">
+            <hr class="underbar"/>
+            <p>A 3D cube matrix created with Three.js. Click and drag to move. Pinch to zoom.</p>
+          </div>
+        </div>
         <div class="gallery-showcase">
           <div class="gallery-embed gallery-codeguild">
             <a href="https://codepen.io/l4nk33/full/WxjjKG/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
