Adds youtube link for the Abstract Cityscape capstone presentation.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <hr class="underbar"/>
           </div>
           <div class="project-details">
-            <p>This is a 3D model of a cityscape that renders in the browser. Utilizing the Three.js library along with the HTML5 Audio API, I was able to bring the scene to life with lights and sound. The city is generated 100% procedurally, each building slightly unique in both shape and size. Through the analysis of audio waveforms I was able to animate the lights in the scene to reflect the average frequency range. This project allowed me to blend my experiences working in film production with my skill-set as a software developer. Feel free to <a href="#" class="info-link" target="_blank">watch</a> my presentation of this project for more details.</p>
+            <p>This is a 3D model of a cityscape that renders in the browser. Utilizing the Three.js library along with the HTML5 Audio API, I was able to bring the scene to life with lights and sound. The city is generated 100% procedurally, each building slightly unique in both shape and size. Through the analysis of audio waveforms I was able to animate the lights in the scene to reflect the average frequency range. This project allowed me to blend my experiences working in film production with my skill-set as a software developer. Feel free to <a href="https://www.youtube.com/watch?v=lBkKHbZ8SkQ" class="info-link" target="_blank">watch</a> my presentation of this project for more details.</p>
           </div>
         </div>
         <div class="project">
