Edits Bio text to reflect react and three.js.

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <div class="link github"></div></a><a target="_blank" href="https://codepen.io/l4nk33/">
                 <div class="link codepen"></div></a><a target="_blank" href="https://www.linkedin.com/in/ianjabour">
                 <div class="link linkedin"></div></a></div>
-            <p>I'm a Full-Stack developer residing in the San Francisco Bay Area. The frontend technologies I am extensively proficient with include Angular, Sass, HTML Canvas, and SVG. On the backend I work predominantly with PostgreSQL as my DBMS of choice and the Express framework for creating and managing API routes. Whether it's implementing an algorithm, levelling up in CodeWars, or building software I always find ways to challenge myself and enhance my engineering skills.</p>
+            <p>I'm a Full-Stack developer residing in the San Francisco Bay Area. The frontend technologies I am extensively proficient with include React, Angular, Sass, HTML Canvas, and Three.js. On the backend I work predominantly with PostgreSQL as my DBMS of choice and the Express framework for creating and managing API routes. Whether it's implementing an algorithm, leveling up in CodeWars, or building software I always find ways to challenge myself and enhance my engineering skills.</p>
           </div>
         </div>
       </div>
