Changes the title of html to Ian Jabour

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Personal Site - Layout</title>
+    <title>Ian Jabour</title>
     <link href="https://fonts.googleapis.com/css?family=Abel|Pontano+Sans" rel="stylesheet">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
