adds new gallery piece to the website

--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
       <h2 class="section-title">Gallery</h2>
       <div class="gallery-section">
         <div class="gallery-showcase">
+          <div class="gallery-embed gallery-messaging-mock">
+            <a href="http://codepen.io/l4nk33/live/ALvoBq" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
+          </div>
+          <div class="gallery-description">
+            <hr class="underbar"/>
+            <p>A simple mock-up for a single page messaging application.</p>
+          </div>
+        </div>
+        <div class="gallery-showcase">
           <div class="gallery-embed gallery-cubematrix">
             <a href="http://codepen.io/l4nk33/live/RGAOor" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
           </div>
