Adds link to widget.

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
       </div>
       <footer class="footer">
         <p><a href="https://github.com/l4nk332/ianjabour.io" target="_blank">100% Handcrafted by Ian Jabour</a></p>
+        <p><a href="elm-calculator.html" target="_blank">Elm-Calculator</a></p>
       </footer>
     </div>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
