Fix style so underbar properly shows on screen sizes and fix broken links
The bio has been updated as well ;]

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="project-section">
         <div class="project">
           <div class="project-image abstract-cityscape">
-            <a href="http://ianjabour.io/abstract_cityscape_3D/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
+            <a href="http://ianjabour.com/abstract_cityscape_3D/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
           </div>
           <div class="project-title">
             <h3>Abstract Cityscape 3D</h3>
@@ -214,14 +214,14 @@
                 <div class="link github"></div></a><a target="_blank" href="https://codepen.io/l4nk33/">
                 <div class="link codepen"></div></a><a target="_blank" href="https://www.linkedin.com/in/ianjabour">
                 <div class="link linkedin"></div></a></div>
-            <p>I'm a Full-Stack developer residing in the San Francisco Bay Area. The frontend technologies I am extensively proficient with include React, Angular, Sass, HTML Canvas, and Three.js. On the backend I work predominantly with PostgreSQL as my DBMS of choice and the Express framework for creating and managing API routes. Whether it's implementing an algorithm, leveling up in CodeWars, or building software I always find ways to challenge myself and enhance my engineering skills.</p>
+            <p>I'm a web developer residing in Redwood City, CA. When I'm not hacking away at a keyboard you'll find me at the beach catching some surf 🤙. In my day to day I work primarily with JavaScript (React) and Python (Django). I am always looking to experiment with new tools and schools of thought in both software development and design. Prior to working in software I studied film production and audio engineering. My favorite movie is Sergio Leone's <a class="text-link" href="http://www.imdb.com/title/tt0060196/" target="_blank">The Good, the Bad and the Ugly</a>.</p>
           </div>
         </div>
       </div>
       <footer class="footer">
-        <p><a href="https://github.com/l4nk332/ianjabour.io" target="_blank">100% Handcrafted by Ian Jabour</a></p>
-        <p><a href="elm-calculator.html" target="_blank">Elm-Calculator</a></p>
-        <p><a href="elm-clock.html" target="_blank">Elm-Clock</a></p>
+        <p><a class="text-link" href="https://github.com/l4nk332/l4nk332.github.io" target="_blank">100% Handcrafted by Ian Jabour</a></p>
+        <p><a class="text-link" href="elm-calculator.html" target="_blank">Elm-Calculator</a></p>
+        <p><a class="text-link" href="elm-clock.html" target="_blank">Elm-Clock</a></p>
       </footer>
     </div>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
