Update Elm-Calculator to latest version.

--- a/elm-calculator.html
+++ b/elm-calculator.html
@@ -8,6 +8,5 @@
 </head>
 <body>
     <div id="main"></div>
-    <script src="js/elm-calculator.js"></script>
-</body>
+<script type="text/javascript" src="js/elm-calculator.min.js"></script></body>
 </html>
