Replaced the messaging mock-up with the elm calculator in gallery

--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
       <h2 class="section-title">Gallery</h2>
       <div class="gallery-section">
         <div class="gallery-showcase">
-          <div class="gallery-embed gallery-messaging-mock">
-            <a href="http://codepen.io/l4nk33/live/ALvoBq" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
+          <div class="gallery-embed gallery-elm-calculator">
+            <a href="elm-calculator.html" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
           </div>
           <div class="gallery-description">
             <hr class="underbar"/>
-            <p>A simple mock-up for a single page messaging application.</p>
+            <p>A simple calculator built in Elm.</p>
           </div>
         </div>
         <div class="gallery-showcase">
@@ -220,7 +220,6 @@
       </div>
       <footer class="footer">
         <p><a class="text-link" href="https://github.com/l4nk332/l4nk332.github.io" target="_blank">100% Handcrafted by Ian Jabour</a></p>
-        <p><a class="text-link" href="elm-calculator.html" target="_blank">Elm-Calculator</a></p>
         <p><a class="text-link" href="elm-clock.html" target="_blank">Elm-Clock</a></p>
       </footer>
     </div>
