Update link ordering, bio text, and title

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <h1 class="last">Jabour</h1>
           </div>
           <div>
-            <h2 class="cipher">Full-Stack Developer</h2>
+            <h2 class="cipher">Frontend Developer</h2>
           </div>
         </div>
-        <div id="down" class="arrow"><span>down</span></div>
+        <div id="down" class="arrow"><span>see more</span></div>
       </div>
       <!-- Projects Section-->
       <h2 id="projects" class="section-title">Projects</h2>
@@ -209,12 +209,20 @@
         <div class="bio-container">
           <div class="avatar-image"></div>
           <div class="bio-details">
-            <div class="links"><a target="_blank" href="https://www.codewars.com/users/l4nk332">
-                <div class="link codewars"></div></a><a target="_blank" href="https://github.com/l4nk332">
-                <div class="link github"></div></a><a target="_blank" href="https://codepen.io/l4nk33/">
-                <div class="link codepen"></div></a><a target="_blank" href="https://www.linkedin.com/in/ianjabour">
-                <div class="link linkedin"></div></a></div>
-            <p>I'm a web developer residing in Redwood City, CA. When I'm not hacking away at a keyboard you'll find me at the beach catching some surf 🤙. In my day to day I work primarily with JavaScript (React) and Python (Django). I am always looking to experiment with new tools and schools of thought in both software development and design. Prior to working in software I studied film production and audio engineering. My favorite movie is Sergio Leone's <a class="text-link" href="http://www.imdb.com/title/tt0060196/" target="_blank">The Good, the Bad and the Ugly</a>.</p>
+            <div class="links">
+              <a target="_blank" href="https://github.com/l4nk332">
+                <div class="link github"></div>
+              </a>
+              <a target="_blank" href="https://codepen.io/l4nk33/">
+                <div class="link codepen"></div>
+              </a>
+              <a target="_blank" href="https://www.codewars.com/users/l4nk332">
+                <div class="link codewars"></div>
+              </a>
+              <a target="_blank" href="https://www.linkedin.com/in/ianjabour">
+                <div class="link linkedin"></div>
+              </a></div>
+            <p>I'm a web developer residing in San Francisco, CA. When I'm not hacking away at a keyboard you'll find me at the beach catching some surf 🤙. In my day to day I work primarily with JavaScript (React) and Python (Django). I am always looking to experiment with new tools and schools of thought in both software development and design. Prior to working in software I studied film production and audio engineering. My favorite movie is Bruce Brown's <a class="text-link" href="https://www.imdb.com/title/tt0060371/" target="_blank">The Endless Summer</a>.</p>
           </div>
         </div>
       </div>
