Add project palette under projects

--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
       <!-- Projects Section-->
       <h2 id="projects" class="section-title">Projects</h2>
       <div class="project-section">
+
+        <div class="project">
+          <div class="project-image project-palette">
+            <a href="https://project-palette.com/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
+          </div>
+          <div class="project-title">
+            <h3>Project Palette</h3>
+            <hr class="underbar"/>
+          </div>
+          <div class="project-details">
+            <p>When I began working through creating a design system for a legacy codebase I found the number one pain point was identifying all the colors used throughout the application. Project Palette is an auditing tool that will scrape a given repository and generate a clean, digestible UI which lays out all the colors used in the project with direct links to the lines where they are used. You can find more details about Project Palette on <a href="https://github.com/l4nk332/Project-Palette" class="info-link" target="_blank">GitHub</a>.
+            </p>
+          </div>
+        </div>
+
         <div class="project">
           <div class="project-image abstract-cityscape">
             <a href="http://ianjabour.com/abstract_cityscape_3D/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
