--- a/index.html
+++ b/index.html
@@ -46,83 +46,7 @@
       </div>
       <!-- Projects Section-->
       <h2 id="projects" class="section-title">Projects</h2>
-      <div class="project-section">
-
-        <div class="project">
-          <div class="project-image project-palette">
-            <a href="https://project-palette.com/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="project-title">
-            <h3>Project Palette</h3>
-            <hr class="underbar"/>
-          </div>
-          <div class="project-details">
-            <p>When I began working through creating a design system for a legacy codebase I found the number one pain point was identifying all the colors used throughout the application. Project Palette is an auditing tool that will scrape a given repository and generate a clean, digestible UI which lays out all the colors used in the project with direct links to the lines where they are used. You can find more details about Project Palette on <a href="https://github.com/l4nk332/Project-Palette" class="info-link" target="_blank">GitHub</a>.
-            </p>
-          </div>
-        </div>
-
-        <div class="project">
-          <div class="project-image abstract-cityscape">
-            <a href="http://ianjabour.com/abstract_cityscape_3D/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="project-title">
-            <h3>Abstract Cityscape 3D</h3>
-            <hr class="underbar"/>
-          </div>
-          <div class="project-details">
-            <p>This is a 3D model of a cityscape that renders in the browser. Utilizing the Three.js library along with the HTML5 Audio API, I was able to bring the scene to life with lights and sound. The city is generated 100% procedurally, each building slightly unique in both shape and size. Through the analysis of audio waveforms I was able to animate the lights in the scene to reflect the average frequency range. This project allowed me to blend my experiences working in film production with my skill-set as a software developer. Feel free to <a href="https://www.youtube.com/watch?v=lBkKHbZ8SkQ" class="info-link" target="_blank">watch</a> my presentation of this project for more details.</p>
-          </div>
-        </div>
-        <div class="project">
-          <div class="project-image chess-ai">
-            <a href="https://github.com/jameslim1021/Chess-AI" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="project-title">
-            <h3>Chess AI</h3>
-            <hr class="underbar"/>
-          </div>
-          <div class="project-details">
-            <p>This project focuses on computer science concepts such as data structures and algorithms. Through utilization of a decision tree the AI can generate the all possible permutations of a chessboard 3 moves into the future. Algorithms implemented in this project include depth first search, minimax, and alpha-beta pruning. This in conjunction with heuristics such as material, number of possible legal moves with emphasis on center squares, check/checkmate status, and pawn structure allow the AI to make the best possible move. <a href="https://www.youtube.com/watch?v=uA0QOQDDKMw" class="info-link" target="_blank">Check out</a> this video Galvanize made on my team and the Chess-AI project.</p>
-          </div>
-        </div>
-        <div class="project">
-          <div class="project-image computer-tennis">
-            <a href="https://github.com/l4nk332/computer-tennis" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="project-title">
-            <h3>Computer Tennis</h3>
-            <hr class="underbar"/>
-          </div>
-          <div class="project-details">
-            <p>Computer Tennis is an in-browser game that implements the HTML Canvas API to recreate and add a variety of features to the classic game Pong. As you rally back and forth the velocity of the ball will increase with each collision. When you lose a rally your paddle gets smaller by a fixed percentage, and if you win the rally your paddle will increase by half of that fixed percentage (unless at original paddle size).</p>
-          </div>
-        </div>
-        <div class="project">
-          <div class="project-image code-guild">
-            <a href="https://github.com/l4nk332/Code-Guild" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="project-title">
-            <h3>Code-Guild</h3>
-            <hr class="underbar"/>
-          </div>
-          <div class="project-details">
-            <p>Code-Guild is a web-platform that connects developers from around the globe in a live coding environment. The platform enables programmers to both teach the languages they are proficient in, while learning the languages that interest them. Code review sessions allow developers to get a second opinion on a module of code within the shared workspace of the application. Technologies implemented include Express, PostgreSQL, Socket.io, and WebRTC.</p>
-          </div>
-        </div>
-        <div class="project">
-          <div class="project-image heart-caller">
-            <a href="https://github.com/jameslim1021/HeartCaller" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="project-title">
-            <h3>HeartCaller</h3>
-            <hr class="underbar"/>
-          </div>
-          <div class="project-details">
-            <p>This hackathon winning submission utilizes iHeart Radio's API along with Socket.io in order to reimplement and redesign the User Experience of listening to radio online. Tearing down the invisible walls between radio hosts and their listeners, HeartCaller allows hosts and djs to directly take song request from their listeners through a live socket connection. Using Node's Express framework routes were set up to handle the logic that tied a host's socket directly to each listener. With nothing more than css flexbox, the layout was handcrafted into a responsive, mobile-first design.</p>
-          </div>
-        </div>
-      </div>
+      <div class="project-section">Loading Projects...</div>
       <!-- Gallery Section-->
       <h2 class="section-title">Gallery</h2>
       <div class="gallery-section">
@@ -237,6 +161,8 @@
       </footer>
     </div>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
+    <script type='module' src="js/renga.min.js"></script>
+    <script type='module' src="js/content.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
