--- a/index.html
+++ b/index.html
@@ -49,89 +49,7 @@
       <div class="project-section">Loading Projects...</div>
       <!-- Gallery Section-->
       <h2 class="section-title">Gallery</h2>
-      <div class="gallery-section">
-        <div class="gallery-showcase">
-          <div class="gallery-embed gallery-elm-calculator">
-            <a href="elm-calculator.html" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="gallery-description">
-            <hr class="underbar"/>
-            <p>A simple calculator built in Elm.</p>
-          </div>
-        </div>
-        <div class="gallery-showcase">
-          <div class="gallery-embed gallery-cubematrix">
-            <a href="http://codepen.io/l4nk33/live/RGAOor" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="gallery-description">
-            <hr class="underbar"/>
-            <p>A 3D cube matrix created with Three.js. Click and drag to move. Pinch to zoom.</p>
-          </div>
-        </div>
-        <div class="gallery-showcase">
-          <div class="gallery-embed gallery-codeguild">
-            <a href="https://codepen.io/l4nk33/full/WxjjKG/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="gallery-description">
-            <hr class="underbar"/>
-            <p>This is the user interface for Code-Guild, a learning platform for developers. It is built in css without any frameworks. The layout uses css flexbox to create a responsive grid system.</p>
-          </div>
-        </div>
-        <div class="gallery-showcase">
-          <div class="gallery-embed gallery-modal">
-            <a href="https://codepen.io/l4nk33/full/wWdZJZ/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="gallery-description">
-            <hr class="underbar"/>
-            <p>This is a UI/UX design for a dropdown modal with instant messaging.</p>
-          </div>
-        </div>
-        <div class="gallery-showcase">
-          <div class="gallery-embed gallery-marine">
-            <a href="https://codepen.io/l4nk33/full/VjWjRZ/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="gallery-description">
-            <hr class="underbar"/>
-            <p>A pure CSS animated implementation of the Marine Layer clothing brand.</p>
-          </div>
-        </div>
-        <div class="gallery-showcase">
-          <div class="gallery-embed gallery-particles">
-            <a href="https://codepen.io/l4nk33/full/mENLmW/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="gallery-description">
-            <hr class="underbar"/>
-            <p>A particle simulation created through the HTML Canvas API done without any libraries.</p>
-          </div>
-        </div>
-        <div class="gallery-showcase">
-          <div class="gallery-embed gallery-cube">
-            <a href="https://codepen.io/l4nk33/full/jPRgRK/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="gallery-description">
-            <hr class="underbar"/>
-            <p>A CSS rendering of a cube. JavaScript keypress event handlers allow for the rotation of the cube to a given side (1-6) or the ability to toggle backface-visibility (B).</p>
-          </div>
-        </div>
-        <div class="gallery-showcase">
-          <div class="gallery-embed gallery-checkbox">
-            <a href="https://codepen.io/l4nk33/full/vKJjOL/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="gallery-description">
-            <hr class="underbar"/>
-            <p>Custom checkboxes with a flat-ui color scheme that glow on hover.</p>
-          </div>
-        </div>
-        <div class="gallery-showcase">
-          <div class="gallery-embed gallery-jala">
-            <a href="https://codepen.io/l4nk33/full/jWXBmx/" target="_blank" style="width: 100%; height: 100%; display: inline-block"></a>
-          </div>
-          <div class="gallery-description">
-            <hr class="underbar"/>
-            <p>An interface for a To-Do List application that changes animation based on the time of day (dusk, morning, day, dawn, night). Backdrop completely done in HTML canvas.</p>
-          </div>
-        </div>
-      </div>
+      <div class="gallery-section">Loading Gallery...</div>
       <!-- Bio Section-->
       <h2 class="section-title">Bio</h2>
       <div class="bio-section">
