Break gallery down by category.

--- a/index.html
+++ b/index.html
@@ -45,11 +45,27 @@
         <div id="down" class="arrow"><span>see more</span></div>
       </div>
       <!-- Projects Section-->
-      <h2 id="projects" class="section-title">Projects</h2>
-      <div class="project-section">Loading Projects...</div>
+      <h2 id="projects-header" class="section-title">Projects</h2>
+      <div id="projects" class="project-section">
+        <span class='loading'>Loading...</span>
+      </div>
       <!-- Gallery Section-->
-      <h2 class="section-title">Gallery</h2>
-      <div class="gallery-section">Loading Gallery...</div>
+      <h2 class="section-title">Widgets</h2>
+      <div id='widgets' class="gallery-section">
+        <span class='loading'>Loading...</span>
+      </div>
+      <h2 class="section-title">Graphics</h2>
+      <div id='graphics' class="gallery-section">
+        <span class='loading'>Loading...</span>
+      </div>
+      <h2 class="section-title">Logos</h2>
+      <div id='logos' class="gallery-section">
+        <span class='loading'>Loading...</span>
+      </div>
+      <h2 class="section-title">Misc</h2>
+      <div id='misc' class="gallery-section">
+        <span class='loading'>Loading...</span>
+      </div>
       <!-- Bio Section-->
       <h2 class="section-title">Bio</h2>
       <div class="bio-section">
