Added darkmode and removed vendor prefixes.

--- a/index.html
+++ b/index.html
@@ -45,34 +45,38 @@
         <div id="down" class="arrow"><span>see more</span></div>
       </div>
       <!-- Projects Section-->
-      <h2 id="projects" class="section-title">Projects</h2>
-      <div class="project-section">Loading Projects...</div>
+      <section class='dark'>
+        <h2 id="projects" class="section-title">Projects</h2>
+        <div class="project-section">Loading Projects...</div>
+      </section>
       <!-- Gallery Section-->
       <h2 class="section-title">Gallery</h2>
       <div class="gallery-section">Loading Gallery...</div>
       <!-- Bio Section-->
-      <h2 class="section-title">Bio</h2>
-      <div class="bio-section">
-        <div class="bio-container">
-          <div class="avatar-image"></div>
-          <div class="bio-details">
-            <div class="links">
-              <a target="_blank" href="https://github.com/l4nk332">
-                <div class="link github"></div>
-              </a>
-              <a target="_blank" href="https://codepen.io/l4nk33/">
-                <div class="link codepen"></div>
-              </a>
-              <a target="_blank" href="https://www.codewars.com/users/l4nk332">
-                <div class="link codewars"></div>
-              </a>
-              <a target="_blank" href="https://www.linkedin.com/in/ianjabour">
-                <div class="link linkedin"></div>
-              </a></div>
-            <p>I'm a web developer residing in San Francisco, CA. When I'm not hacking away at a keyboard you'll find me at the beach catching some surf 🤙. In my day to day I work primarily with JavaScript (React) and Python (Django). I am always looking to experiment with new tools and schools of thought in both software development and design. Prior to working in software I studied film production and audio engineering. My favorite movie is Bruce Brown's <a class="text-link" href="https://www.imdb.com/title/tt0060371/" target="_blank">The Endless Summer</a>.</p>
+      <section class='dark'>
+        <h2 class="section-title">Bio</h2>
+        <div class="bio-section">
+          <div class="bio-container">
+            <div class="avatar-image"></div>
+            <div class="bio-details">
+              <div class="links">
+                <a target="_blank" href="https://github.com/l4nk332">
+                  <div class="link github"></div>
+                </a>
+                <a target="_blank" href="https://codepen.io/l4nk33/">
+                  <div class="link codepen"></div>
+                </a>
+                <a target="_blank" href="https://www.codewars.com/users/l4nk332">
+                  <div class="link codewars"></div>
+                </a>
+                <a target="_blank" href="https://www.linkedin.com/in/ianjabour">
+                  <div class="link linkedin"></div>
+                </a></div>
+              <p>I'm a web developer residing in San Francisco, CA. When I'm not hacking away at a keyboard you'll find me at the beach catching some surf 🤙. In my day to day I work primarily with JavaScript (React) and Python (Django). I am always looking to experiment with new tools and schools of thought in both software development and design. Prior to working in software I studied film production and audio engineering. My favorite movie is Bruce Brown's <a class="text-link" href="https://www.imdb.com/title/tt0060371/" target="_blank">The Endless Summer</a>.</p>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
       <footer class="footer">
         <p><a class="text-link" href="https://github.com/l4nk332/l4nk332.github.io" target="_blank">100% Handcrafted by Ian Jabour</a></p>
         <p><a class="text-link" href="elm-clock.html" target="_blank">Elm-Clock</a></p>
