Add necessary adjusments to allow for offline development. Updated link styling.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Ian Jabour</title>
-    <link href="https://fonts.googleapis.com/css?family=Abel|Pontano+Sans" rel="stylesheet">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Hairline|Megrim|Nixie+One" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- Load favicons and icons -->
@@ -88,18 +85,17 @@
                 <a target="_blank" href="https://www.linkedin.com/in/ianjabour">
                   <div class="link linkedin"></div>
                 </a></div>
-              <p>I'm a web developer residing in San Francisco, CA. When I'm not hacking away at a keyboard you'll find me at the beach catching some surf 🤙. In my day to day I work primarily with JavaScript (React) and Python (Django). I am always looking to experiment with new tools and schools of thought in both software development and design. Prior to working in software I studied film production and audio engineering. My favorite movie is Bruce Brown's <a class="text-link" href="https://www.imdb.com/title/tt0060371/" target="_blank">The Endless Summer</a>.</p>
+              <p>I'm a web developer residing in San Francisco, CA. When I'm not hacking away at a keyboard you'll find me at the beach catching some surf 🤙. In my day to day I work primarily with JavaScript (React) and Python (Django). I am always looking to experiment with new tools and schools of thought in both software development and design. Prior to working in software I studied film production and audio engineering. My favorite movie is Bruce Brown's <a class="info-link" href="https://www.imdb.com/title/tt0060371/" target="_blank">The Endless Summer</a>.</p>
             </div>
           </div>
         </div>
       </section>
       <footer class="footer">
-        <p><a class="text-link" href="https://github.com/l4nk332/l4nk332.github.io" target="_blank">100% Handcrafted by Ian Jabour</a></p>
-        <p><a class="text-link" href="elm-clock.html" target="_blank">Elm-Clock</a></p>
+        <p><a class="info-link" href="https://github.com/l4nk332/l4nk332.github.io" target="_blank">100% Handcrafted by Ian Jabour</a></p>
       </footer>
     </div>
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
-    <script type='module' src="js/renga.min.js"></script>
+    <script src='assets/libraries/jquery.min.js'></script>
+    <script type='module' src="assets/libraries/renga.min.js"></script>
     <script type='module' src="js/content.js"></script>
     <script src="js/index.js"></script>
   </body>
