Add title attribute to the images

--- a/index.html
+++ b/index.html
@@ -73,25 +73,25 @@
             <div class="avatar-image"></div>
             <div class="bio-details">
               <div class="links">
-                <a target="_blank" href="https://github.com/l4nk332">
+                <a target="_blank" href="https://github.com/l4nk332" title='Link to GitHub profile'>
                   <div class="link github"></div>
                 </a>
-                <a target="_blank" href="https://codepen.io/l4nk33/">
+                <a target="_blank" href="https://codepen.io/l4nk33/" title='Link to CodePen'>
                   <div class="link codepen"></div>
                 </a>
-                <a target="_blank" href="https://www.codewars.com/users/l4nk332">
+                <a target="_blank" href="https://www.codewars.com/users/l4nk332" title='Link to CodeWars'>
                   <div class="link codewars"></div>
                 </a>
-                <a target="_blank" href="https://www.linkedin.com/in/ianjabour">
+                <a target="_blank" href="https://www.linkedin.com/in/ianjabour" title='Link to LinkedIn'>
                   <div class="link linkedin"></div>
                 </a></div>
-              <p>I'm a web developer residing in San Francisco, CA. When I'm not hacking away at a keyboard you'll find me at the beach catching some surf 🤙. In my day to day I work primarily with JavaScript (React) and Python (Django). I am always looking to experiment with new tools and schools of thought in both software development and design. Prior to working in software I studied film production and audio engineering. My favorite movie is Bruce Brown's <a class="info-link" href="https://www.imdb.com/title/tt0060371/" target="_blank">The Endless Summer</a>.</p>
+              <p>I'm a web developer residing in San Francisco, CA. When I'm not hacking away at a keyboard you'll find me at the beach catching some surf 🤙. In my day to day I work primarily with JavaScript (React) and Python (Django). I am always looking to experiment with new tools and schools of thought in both software development and design. Prior to working in software I studied film production and audio engineering. My favorite movie is Bruce Brown's <a class="info-link" href="https://www.imdb.com/title/tt0060371/" target="_blank" title='Link to IMDB'>The Endless Summer</a>.</p>
             </div>
           </div>
         </div>
       </section>
       <footer class="footer">
-        <p><a class="info-link" href="https://github.com/l4nk332/l4nk332.github.io" target="_blank">100% Handcrafted by Ian Jabour</a></p>
+        <p><a class="info-link" href="https://github.com/l4nk332/l4nk332.github.io" target="_blank" title='Link to GitHub for this site'>100% Handcrafted by Ian Jabour</a></p>
       </footer>
     </div>
     <script src='assets/libraries/jquery.min.js'></script>
