Start using project layout for gallery items

--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
       </section>
       <!-- Gallery Section-->
       <h2 class="section-title">Widgets</h2>
-      <div id='widgets' class="gallery-section">
+      <div id='widgets' class="project-section">
         <span class='loading'>Loading...</span>
       </div>
       <h2 class="section-title">Graphics</h2>
-      <div id='graphics' class="gallery-section">
+      <div id='graphics' class="project-section">
         <span class='loading'>Loading...</span>
       </div>
       <h2 class="section-title">Logos</h2>
-      <div id='logos' class="gallery-section">
+      <div id='logos' class="project-section">
         <span class='loading'>Loading...</span>
       </div>
       <h2 class="section-title">Misc</h2>
-      <div id='misc' class="gallery-section">
+      <div id='misc' class="project-section">
         <span class='loading'>Loading...</span>
       </div>
       <!-- Bio Section-->
